src/test/data/tests/pragma/invalid/invalid_constant.c
#pragma data 0x00 "\xGF"

int main(void) {
    return 0;
}
